--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 Uip1.0/Uip1.0.depend
 Uip1.0/Uip1.0.layout
 Uip1.0/Uip1.0.layout.cbTemp
+Uip1.0/Uip1.0.cbp.cbTemp
 Uip1.0/bin/Debug/Uip1.cdb
 Uip1.0/bin/Debug/Uip1.hex
 Uip1.0/bin/Debug/Uip1.lnk
